--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://spstolar.github.io/mumlblog/search/" />
 <meta property="og:site_name" content="Musical Machine Learning" />
 <script type="application/ld+json">
-{"headline":"Search","description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"https://spstolar.github.io/mumlblog/search/","@context":"https://schema.org"}</script>
+{"description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"https://spstolar.github.io/mumlblog/search/","headline":"Search","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/mumlblog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://spstolar.github.io/mumlblog/feed.xml" title="Musical Machine Learning" /><link rel="shortcut icon" type="image/x-icon" href="/mumlblog/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Search | Musical Machine Learning</title>
@@ -27,7 +27,7 @@
 <meta property="og:url" content="https://spstolar.github.io/mumlblog/search/" />
 <meta property="og:site_name" content="Musical Machine Learning" />
 <script type="application/ld+json">
-{"headline":"Search","description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"https://spstolar.github.io/mumlblog/search/","@context":"https://schema.org"}</script>
+{"description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"https://spstolar.github.io/mumlblog/search/","headline":"Search","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
