deploy: 15bcf97ebd80541a13830c689e15568f93d19ae2

--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="http://simonstolarczyk.com/search/" />
 <meta property="og:site_name" content="Musical Machine Learning" />
 <script type="application/ld+json">
-{"description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"http://simonstolarczyk.com/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"headline":"Search","description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"http://simonstolarczyk.com/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://simonstolarczyk.com/feed.xml" title="Musical Machine Learning" /><link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Search | Musical Machine Learning</title>
@@ -27,7 +27,7 @@
 <meta property="og:url" content="http://simonstolarczyk.com/search/" />
 <meta property="og:site_name" content="Musical Machine Learning" />
 <script type="application/ld+json">
-{"description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"http://simonstolarczyk.com/search/","headline":"Search","@context":"https://schema.org"}</script>
+{"headline":"Search","description":"A blog where I think about music, machine learning, and other things that interest me.","@type":"WebPage","url":"http://simonstolarczyk.com/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
